# argon

./: .gitignore  .gitmodules  .jvmopts  .scalafix.conf  .scalafmt.conf  .sdkmanrc  build.sbt  compiler-tests.sh
Argon.Core/js/: index.js  tsconfig.json
argon-armodule-loader/node/: package-lock.json
argon-armodule/js/: package-lock.json
argon-armodule/node/: package-lock.json
argon-build/js/: package.json  (+1 more)
argon-cli/: package-lock.json  package.json
argon-compiler-launcher-js/: package-lock.json  package.json
argon-js-module-extractor/: package-lock.json
argon-platform-node/: package-lock.json
argon-web-demo/: index.html  package-lock.json  package.json  worker.js
dependencies/: .gitignore  lua-SHA256SUM.txt  setup.sh
docs/: launcher-jvm.md
esexpr-multichannel-js/: package-lock.json  package.json  tsconfig.json
esxmc/: esxmc-framing.nidl
external-api/: generate-api.sh  js-api.gcrpc  js-api.idrpc
parse18/: Cargo.toml
parse18/argon-parser/: Cargo.toml
parse18/parse18-lexer-gen/: Cargo.toml
parse18/parse18-lexer-gen/src/: builder.rs  fsm.rs  lib.rs  regex.rs
parse18/parse18-lexer-gen/src/codegen/: mod.rs  scala.rs
parse18/parse18-ll-gen/: Cargo.toml
parse18/parse18-ll-gen/src/: grammar.rs  lib.rs
parse18/parse18-ll-gen/src/codegen/: mod.rs  scala.rs
project/: ArgonLibraryBuild.scala  ArgonVMBytecodeFormatJavaGenerator.scala  ArgonVMBytecodeFormatSourceGenerator.scala  NodePlatform.scala  NpmUtil.scala  build-deps.sbt  build.sbt  nobleidl.sbt  plugins.sbt  scalablytyped.sbt  scalajs.sbt  scalapb.sbt  scrooge.sbt
vm/: bytecode.json
(+3363 files in other folders)
